user update model added

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,10 +1,12 @@
 baseUrl= http://dailyfinanceapi.roadtocareer.net
-UserId = ecb577b3-50e2-48e4-a80d-83d48e32ce43
-userFirstName = Lyn
-userLastName = Emmerich
-userEmail = nadim.cse.edu+8773@gmail.com
+UserId = 632748df-61b3-4056-95ed-e50a65f2aabc
+userFirstName = Mr
+userLastName = ABC
+userEmail = nadim.cse.edu+3248@gmail.com
 userPassword = 1234
-userAddress = Apt. 300 976 Anja Inlet,Moisesland,DE 24344
-userGender = Male
-ItemId = 6b872144-7a3a-434c-96ae-80c78fcf1ae6
+userPhoneNumber = 01603333333
+userAddress = Suite 033 969 Graig Harbor,Hectorburgh,MS 23763
+gender = Female
+token =
+userToken =
 ItemName = Food
